temp/objects/EventLog__c.object
<CustomObject>
    <description>Table to record information, warning and error events</description>
    <fields>
        <fullName>DateTime__c</fullName>
        <label>Date &amp; Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Process__c</fullName>
        <label>Process</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Information</fullName>
                </value>
                <value>
                    <fullName>Warning</fullName>
                </value>
                <value>
                    <fullName>Error</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>EventLog</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>DateTime__c</columns>
        <columns>Process__c</columns>
        <columns>Type__c</columns>
        <columns>Description__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>pt_BR</language>
    </listViews>
    <nameField>
        <displayFormat>LOG-{000000}</displayFormat>
        <label>Sequence</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EventLog</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>